# Algorithm-Engineering

./: .gitignore  README.md
01_Code/: hello  hello.cpp  hello_simple  pi_monte_carlo.cpp  pi_numerical_integration.cpp  pi_numerical_integration_openmp.cpp  pi_openmp_monte_carlo  pi_openmp_monte_carlo.cpp  pi_openmp_v1
02_Code/: continue_hack  continue_hack.cpp  continue_hack_min_solution_atomic  continue_hack_min_solution_atomic.cpp  continue_hack_min_solution_lock  continue_hack_min_solution_lock.cpp  false_sharing.cpp  no_false_sharing.cpp  pi_openmp_v1.cpp  pi_openmp_v2  pi_openmp_v2.cpp  pi_slow  pi_slow.cpp  pragma_omp_for.cpp  race_condition  race_condition.cpp  schedule_clause  schedule_clause.cpp  unbalanced_workload  unbalanced_workload.cpp
03_Code/: barrier.cpp  cancellation_points.cpp  collapse.cpp  grid_search.cpp  library_routines.cpp  mandelbrot  mandelbrot.cpp  mandelbrot_tuned  mandelbrot_tuned.cpp  ordered.cpp  pi_cpp_threads  pi_cpp_threads.cpp  pi_numerical_integration  pi_numerical_integration.cpp  (+6 more)
project/: CMakeLists.txt  a.out  adaptive_thresholding.cpp  adaptive_thresholding.h  input.pgm  main.cpp  median.cpp  median.h  otsu.cpp  otsu.h  output.ppm  test.cpp  test.h  utils.cpp  utils.h  utils.hpp
project/images/: image.pgm  image.ppm  img.pgm  img_00.pgm  img_00.ppm  img_01.ppm  img_02.ppm  img_03.ppm  img_04.ppm  img_05.ppm  img_05_output.pgm  img_06.ppm  img_07.ppm  img_07_out.ppm  img_07_output.pgm  img_08.ppm  img_09.ppm  input.ppm  out.pgm  output.pgm  output.ppm  output_00.ppm  output_a.ppm  write_image.ppm
project/tests/: test.cpp
(+78 files in other folders)
